--- a/astabil.html
+++ b/astabil.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title></title>
+    <h1>AstabilMultivibrátor</h1>
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
-        <a href="#" id="about">Astabil Multivibrátor</a>
+        <a href="astabil.html" id="about" >Astabil Multivibrátor</a>
         <a href="#" id="blog">Blog</a>
     </div>
-      
-      <div style="margin-left:80px;">
-        <h2>Sziasztok Pongó Tamás vagyok be mutatom nektek az én tanulmányaimat a következö évek során.</h2>
-        <p></p>
-      </div>
 </body>
 </html>
